--- a/WebContent/css/style_ori.css
+++ b/WebContent/css/style_ori.css
@@ -8174,10 +8174,10 @@ h1, h2, h3, h4, h5,
   z-index: 3; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
-      background: #152e19 !important;
+      background: #000000 !important;
       position: relative;
       top: 0; } }
-  .ftco-navbar-light .navbar-brand  {
+  .ftco-navbar-light .navbar-brand {
     color: #fff; }
     .ftco-navbar-light .navbar-brand span {
       color: #94B49F; }
@@ -8185,16 +8185,16 @@ h1, h2, h3, h4, h5,
       color: #94B49F;
       }
     @media (max-width: 991.98px) {
-      .ftco-navbar-light .navbar-brand  {
+      .ftco-navbar-light .navbar-brand {
         color: #fff; } }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav {
       padding-bottom: 10px; } }
-  .ftco-navbar-light .navbar-nav > .nav-item > .nav-link  {
+  .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
     font-size: 15px;
     padding-top: .9rem;
     padding-bottom: .9rem;
-    padding-left: 40px;
+    padding-left: 20px;
     padding-right: 20px;
     color: #fff;
     font-weight: 400;
@@ -8207,10 +8207,6 @@ h1, h2, h3, h4, h5,
         padding-right: 0;
         padding-bottom: 0;
         color: #fff; } }
-
-        
-        
-        
   .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
     border: none;
     background: #fff;
@@ -8329,19 +8325,7 @@ h1, h2, h3, h4, h5,
       padding-bottom: 0.9rem !important;
       color: #000000 !important; }
       .ftco-navbar-light.scrolled .nav-link.active {
-        color: #0c3b17 !important; }
-/*         테스트 */
-    .ftco-navbar-light.scrolled .nav-dlink {
-      padding-top: 0.9rem !important;
-      padding-bottom: 0.9rem !important;
-      color: #000000 !important; }
-      .ftco-navbar-light.scrolled .nav-dlink.active {
-        color: #0c3b17 !important; }
-
-
-/*         테스트 */
-        
-        
+        color: #1089ff !important; }
     .ftco-navbar-light.scrolled.awake {
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
@@ -8450,9 +8434,9 @@ h1, h2, h3, h4, h5,
       .slider-text .breadcrumbs span a {
         color: rgba(255, 255, 255, 0.7); }
         .slider-text .breadcrumbs span a:hover, .slider-text .breadcrumbs span a:focus {
-          color: #0c3b17; }
+          color: #1089ff; }
           .slider-text .breadcrumbs span a:hover i, .slider-text .breadcrumbs span a:focus i {
-            color: #0c3b17; }
+            color: #1089ff; }
   .slider-text .bread {
     font-weight: 400 !important;
     position: relative;
@@ -8551,7 +8535,7 @@ h1, h2, h3, h4, h5,
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       margin-top: -10px;
-      color: #0c3b17 !important;
+      color: #1089ff !important;
       -moz-transition: all 0.7s ease;
       -o-transition: all 0.7s ease;
       -webkit-transition: all 0.7s ease;
