--- a/Project2/WebContent/css/style.css
+++ b/Project2/WebContent/css/style.css
@@ -1339,13 +1339,12 @@ pre {
   .table td {
     padding: 0.75rem;
     vertical-align: top;
-    border: 1px solid #dee2e6; 
-     }
+    border-top: 1px solid #dee2e6; }
   .table thead th {
     vertical-align: bottom;
-    border: 1px solid #dee2e6; }
+    border-bottom: 2px solid #dee2e6; }
   .table tbody + tbody {
-    border: 1px solid #dee2e6; }
+    border-top: 2px solid #dee2e6; }
 
 .table-sm th,
 .table-sm td {
@@ -8200,7 +8199,7 @@ h1, h2, h3, h4, h5,
     font-weight: 400;
     opacity: 1 !important; }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-      color: #94b49f; }
+      color: #01d28e; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
         padding-left: 0;
@@ -8286,7 +8285,7 @@ h1, h2, h3, h4, h5,
         padding-right: 0 !important;
         padding-bottom: 0 !important; } }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #94b49f !important; }
+      color: #1089ff !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
       background: #1089ff;
@@ -8619,13 +8618,13 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #94b49f !important;
-    border: 1px solid #94b49f !important;
+    background: #1089ff !important;
+    border: 1px solid #1089ff !important;
     color: #fff !important; }
     .btn.btn-primary:hover {
-      border: 1px solid #94b49f;
+      border: 1px solid #1089ff;
       background: transparent;
-      color: #94b49f; }
+      color: #1089ff; }
     .btn.btn-primary.btn-outline-primary {
       border: 1px solid #1089ff;
       background: transparent;
@@ -9119,7 +9118,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #f0f0f0!important; }
+  background: #1089ff !important; }
 
 .bg-black {
   background: #000000; }
